tooling/nargo_cli/tests/snapshots/execution_success/simple_print/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: Field, v1: Field):
    (no terminator instruction)
}
0x01
[0x01, 0x02]
